# elfeed-offline

./: .gitignore  README.org  dune-project  elfeed-offline.nix  flake.nix
.github/workflows/: build.yml  main.yml  release.yml
lib/: dune  proxy.ml
scripts/: dune  generate.ml  get-ip.sh  icons.sh  mDNS.sh  make-artifact.sh  make-cert.sh  release.sh
test/: dune  test_elfeed_offline.ml
web/: dune  index.html  manifest.webmanifest  service-worker.js  sw.ml
web/css/: app.css
web/js/: actions.ml  api.ml  app.js  app.ml  dune  elfeed_message.ml  entry.ml  heartbeat.ml  icons.ml  keyboard_nav.ml  location.ml  nav.ml  offline_search.ml  state.ml  tag.ml  util.ml
