(executable
 (name app)
 (modes js)
 (modules app)
 (libraries brr elfeed_offline_web))

(rule
 (mode promote)
 (target app.js)
 (deps app.bc.js)
 (action
  (copy %{deps} %{target})))

(library
 (name elfeed_offline_web)
 (modules offline_search state util entry icons nav api util)
 (libraries brr astring str ptime ptime.clock uri))
