(executable
 (name app)
 (modes js)
 (modules app)
 (libraries brr elfeed_offline_web brr-lwd lwd))

(rule
 (mode promote)
 (target app.js)
 (deps app.bc.js)
 (action
  (copy %{deps} %{target})))

; Library shared between the web app and the service worker

(library
 (name elfeed_shared)
 (modules elfeed_message)
 (libraries brr))

; Library for the web app to allow testing

(library
 (name elfeed_offline_web)
 (modules offline_search state util entry icons nav util location heartbeat)
 (libraries brr astring str ptime ptime.clock uri elfeed_shared lwd brr-lwd))
